--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(./Imagenes/fondo.jpg);
+    background-color: beige;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -16,6 +16,8 @@ a{
 h4{
     color: red;
 }
+
+
 
 .movimiento:hover{
     transform: scale(1.1);
@@ -37,5 +39,7 @@ h4{
 animation-name: efecto;
 animation-delay: 1s;
 animation-duration: 3s;
+
+
 
 }
