--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -27,6 +27,11 @@ a {
     outline: 5px solid map-get($paleta-colores, "titulo" );
 }
 
+.img-fotos {
+    height: 20rem;
+    object-fit: cover;
+}
+
 .movimiento:hover {
     transform: scale(1.1);
     box-shadow: 0px 0px 50px grey;
